syntax = "proto3";

package models;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = true;

message Reference {
	enum Type {
		ENTITY = 0;
	}
	Type type = 1;
	string id = 2 [(gogoproto.customname) = "ID"];
}

message Message {
	string text = 1;
	repeated Attachment attachments = 2;
	enum Status {
		NORMAL = 0;
		DELETED = 1;
	}
	Status status = 3;
	Endpoint source = 4;
	repeated Endpoint destinations = 5;
	uint64 edited_timestamp = 6;
	string editor_entity_id = 7 [(gogoproto.customname) = "EditorEntityID"];
	string title = 8;
	repeated Reference text_refs = 9; // References from the message body text
	string summary = 10;
}

message EndpointList {
	repeated Endpoint endpoints = 1;
}

message Endpoint {
	enum Channel {
		APP = 0;
		SMS = 1;
		VOICE = 2;
		EMAIL = 3;
	}
	Channel channel = 1;
	string id = 2 [(gogoproto.customname) = "ID"];
}

message MessageUpdated {
	string thread_item_id = 1 [(gogoproto.customname) = "ThreadItemID"];
	string actor_entity_id = 2 [(gogoproto.customname) = "ActorEntityID"];
	Message message = 3;
}

message FollowerUpdated {
	string entity_id = 1 [(gogoproto.customname) = "EntityID"];
}

message Attachment {
	enum Type {
		IMAGE = 0;
		AUDIO = 1;
		GENERIC = 2;
		CARE_PLAN = 3;
		VISIT = 4;
		VIDEO = 5;
		PAYMENT_REQUEST = 6;
	}
	Type type = 1;
	string title = 2;
	string url = 3 [(gogoproto.customname) = "URL"];
	oneof data {
		ImageAttachment image = 10;
		AudioAttachment audio = 11;
		GenericAttachment generic = 12;
		VisitAttachment visit = 13;
		CarePlanAttachment care_plan = 14;
		VideoAttachment video = 15;
		PaymentRequestAttachment payment_request = 16;
	}
}

message ImageAttachment {
	string mimetype = 1;
	string media_id = 2 [(gogoproto.customname) = "MediaID"];
	uint32 width = 3;
	uint32 height = 4;
}

message VideoAttachment {
	string mimetype = 1;
	string media_id = 2 [(gogoproto.customname) = "MediaID"];
	uint64 duration_ns = 4 [(gogoproto.customname) = "DurationNS"];
}

message AudioAttachment {
	string mimetype = 1;
	string media_id = 2 [(gogoproto.customname) = "MediaID"];
	uint32 deprecated_duration_in_seconds = 3; // Deprecated
	uint64 duration_ns = 4 [(gogoproto.customname) = "DurationNS"];
}

message GenericAttachment {
	string mimetype = 1;
	string url = 2 [(gogoproto.customname) = "URL"];
}

message VisitAttachment {
	string visit_id = 1 [(gogoproto.customname) = "VisitID"];
	string visit_name = 2;
}

message CarePlanAttachment {
	string care_plan_id = 1 [(gogoproto.customname) = "CarePlanID"];
	string care_plan_name = 2;
}

message PaymentRequestAttachment {
	string payment_id = 1 [(gogoproto.customname) = "PaymentID"];
}
